bugFix: fixed navbar position issue on mobile increased text margin on slideOne increased meeting details margin bottom

--- a/components/Slides/HeaderTwo/headertwo.module.scss
+++ b/components/Slides/HeaderTwo/headertwo.module.scss
@@ -14,7 +14,7 @@
 	background-size: cover;
 	@include flex(row, flex-end, center);
 	@include tab {
-		padding-bottom: 18vh;
+		padding-bottom: 24vh;
 	}
 	@include xxxlarge-height {
 		height: 68vh;
